--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ url:              www.adityagupta961.github.io
 baseurl:          /
 
 author:
-  name:           'Mark Otto'
-  url:            https://twitter.com/mdo
+  name:           'Aditya Gupta'
+  url:            https://linkedin.com
 
 paginate:         5
 
@@ -23,4 +23,4 @@ paginate:         5
 version:          2.1.0
 
 github:
-  repo:           https://github.com/poole/hyde
+  repo:           https://github.com/AdityaGupta961
