--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ permalink:        pretty
 # Setup
 title:            Aditya Gupta
 tagline:          'CSE Student'
-description:      'I work on interesting projects and research'
+description:      'ML enthusiast - specifically the bridge between practical applications and theoretical possibilities. I work on interesting projects and research'
 url:              http:adityagupta961.github.io
 baseurl:          /
 
