--- a/_config.yml
+++ b/_config.yml
@@ -23,4 +23,4 @@ paginate:         5
 version:          2.1.0
 
 github:
-  repo:           https://github.com/adityagupta961/adityagupta961.github.io
+  repo:           https://github.com/adityagupta961
